testdata/baselines/reference/submodule/conformance/jsdocTemplateClass.errors.txt
templateTagOnClasses.js(10,14): error TS2339: Property 'a' does not exist on type 'Foo'.
templateTagOnClasses.js(17,17): error TS2304: Cannot find name 'T'.
templateTagOnClasses.js(25,3): error TS2339: Property 'a' does not exist on type 'Foo'.
templateTagOnClasses.js(25,9): error TS2339: Property 'a' does not exist on type 'Foo'.


==== templateTagOnClasses.js (4 errors) ====
    /**
     * @template T
     * @typedef {(t: T) => T} Id
     */
    /** @template T */
    class Foo {
        /** @typedef {(t: T) => T} Id2 */
        /** @param {T} x */
        constructor (x) {
            this.a = x
                 ~
!!! error TS2339: Property 'a' does not exist on type 'Foo'.
        }
        /**
         * 
         * @param {T} x 
         * @param {Id<T>} y
         * @param {Id2} alpha
         * @return {T}
                    ~
!!! error TS2304: Cannot find name 'T'.
         */
        foo(x, y, alpha) {
            return alpha(y(x))
        }
    }
    var f = new Foo(1)
    var g = new Foo(false)
    f.a = g.a
      ~
!!! error TS2339: Property 'a' does not exist on type 'Foo'.
            ~
!!! error TS2339: Property 'a' does not exist on type 'Foo'.
    